fixed character not being on screen by adjusting in css sheet, game starts, whe  hits obstacle character does end with game over message, character does not jump, game does not fully reset when accepting the game over message

--- a/style.css
+++ b/style.css
@@ -30,9 +30,9 @@ p{
   #character {
     position: absolute;
   bottom: 0;
-  left: 50px;
+
   width: 50px;
-  height: 50px;
+  height: 80px;
   background-color: blue;
   }
   
